unpackaged/main/default/objects/ACG_Facility_Adjustment__c/ACG_Facility_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Facility Adjustment</label>
    <nameField>
        <displayFormat>FA-{000}</displayFormat>
        <label>Facility Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>