unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(Deprecate?) Facility Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Adjustments</relationshipLabel>
    <relationshipName>Facility_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>