unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Adjustment_Category__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustment_Category__c</fullName>
    <label>Adjustment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAR</fullName>
            </value>
            <value>
                <fullName>Advances</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Basic Reciprocal</fullName>
            </value>
            <value>
                <fullName>Battery and Battery Charger Costs</fullName>
            </value>
            <value>
                <fullName>Battery Warranty Reserve-Club Assist</fullName>
            </value>
            <value>
                <fullName>Battery Warranty Reserve-Interstate</fullName>
            </value>
            <value>
                <fullName>BKGRND</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Fuel Subsidy</fullName>
            </value>
            <value>
                <fullName>GOODYEAR</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Interstate Battery</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Reciprocal</fullName>
            </value>
            <value>
                <fullName>Overdrawn</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Plus Reciprocal</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Premier Reciprocal</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>RV Reciprocal</fullName>
            </value>
            <value>
                <fullName>Sign On Bonus</fullName>
            </value>
            <value>
                <fullName>Sonsio</fullName>
            </value>
            <value>
                <fullName>Tablets</fullName>
            </value>
            <value>
                <fullName>Truck Lease</fullName>
            </value>
            <value>
                <fullName>Truck Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>