unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustment_Type__c</fullName>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>