unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Adjustments_Made__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustments_Made__c</fullName>
    <label>Adjustments Made</label>
    <summaryFilterItems>
        <field>ACG_Facility_Adjustment_Payment__c.ACG_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>ACG_Facility_Adjustment_Payment__c.ACG_Adjustment_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>