unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Adjustments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustments_Remaining__c</fullName>
    <formula>ACG_No_of_Payments__c  -  ACG_Adjustments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustments Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>