unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>ACG_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <summarizedField>ACG_Facility_Adjustment_Payment__c.ACG_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>ACG_Facility_Adjustment_Payment__c.ACG_Status__c</field>
        <operation>equals</operation>
        <value>Submitted for Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>ACG_Facility_Adjustment_Payment__c.ACG_Adjustment_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>