unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ACG_Amount_Remaining__c</fullName>
    <formula>ACG_Total_Adjustment_Amount__c  -  ACG_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>