unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Charge_1099__c.field-meta.xml
<CustomField>
    <fullName>ACG_Charge_1099__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charge 1099</label>
    <type>Checkbox</type>
</CustomField>