unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>