unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Facility_ID__c</fullName>
    <formula>Account__r.Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility ID</label>
    <type>Text</type>
</CustomField>