unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Most_Recent_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Most_Recent_Pay_Date__c</fullName>
    <label>Last Pay Date</label>
    <summarizedField>ACG_Facility_Adjustment_Payment__c.Pay_Date__c</summarizedField>
    <summaryForeignKey>ACG_Facility_Adjustment_Payment__c.ACG_Adjustment_ID__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>