unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Nature_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Nature_of_Payments__c</fullName>
    <label>Nature of Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>