unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_No_of_Payment_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>ACG_No_of_Payment_Adjustments__c</fullName>
    <label>No of Payment Adjustments</label>
    <summaryForeignKey>ACG_Facility_Adjustment_Payment__c.ACG_Adjustment_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>