unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_No_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>ACG_No_of_Payments__c</fullName>
    <defaultValue>1</defaultValue>
    <label>No. of Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>