unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>ACG_Payment_Made__c</fullName>
    <formula>ACG_Amount_Paid__c&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Made</label>
    <type>Checkbox</type>
</CustomField>