unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACG_Reason__c</fullName>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>