unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>