unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Status__c.field-meta.xml
<CustomField>
    <fullName>ACG_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>