unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/ACG_Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>ACG_Total_Adjustment_Amount__c</fullName>
    <formula>ACG_No_of_Payments__c  *  ACG_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>