unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Adjustment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Frequency__c</fullName>
    <label>Adjustment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>