unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Adjustments_Pending__c.field-meta.xml
<CustomField>
    <fullName>Adjustments_Pending__c</fullName>
    <label>Adjustments Pending</label>
    <summaryFilterItems>
        <field>ACG_Facility_Adjustment_Payment__c.ACG_Status__c</field>
        <operation>equals</operation>
        <value>Ready for Processing, Ready for Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>ACG_Facility_Adjustment_Payment__c.ACG_Adjustment_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>