unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Deferred_On__c.field-meta.xml
<CustomField>
    <fullName>Deferred_On__c</fullName>
    <label>Deferred On</label>
    <type>DateTime</type>
</CustomField>