unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Facility_Adjustment_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_Name__c</fullName>
    <label>Facility Adjustment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>