unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Facility_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Adjustment_Type__c</fullName>
    <label>Facility Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>