unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Processed_Adjustments_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Processed_Adjustments_Remaining__c</fullName>
    <formula>ACG_No_of_Payments__c - Total_Invoices_Pending_and_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Processed Adjustments Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>