unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Reactivated_On__c.field-meta.xml
<CustomField>
    <fullName>Reactivated_On__c</fullName>
    <label>Reactivated On</label>
    <type>DateTime</type>
</CustomField>