unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivation_Date__c</fullName>
    <description>Users must populate this field upon reactivation from &#39;Deferred&#39; status. This date will then create Invoices starting on an unreconciled Statement with the same start date as this field.</description>
    <inlineHelpText>Users must populate this field upon reactivation from &#39;Deferred&#39; status. This date will then create Invoices starting on an unreconciled Statement with the same start date as this field.</inlineHelpText>
    <label>Reactivation Date</label>
    <type>Date</type>
</CustomField>