unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Facility Adjustments</relationshipLabel>
    <relationshipName>Facility_Adjustments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>