unpackaged/main/default/objects/ACG_Facility_Adjustment__c/fields/Total_Invoices_Pending_and_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoices_Pending_and_Paid__c</fullName>
    <formula>Adjustments_Pending__c + ACG_Adjustments_Made__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoices (Pending and Paid)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>