unpackaged/main/default/objects/ACG_Facility_Adjustment__c/validationRules/Cannot_change_Adjsutments_when_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Adjsutments_when_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(ACG_Status__c,
&quot;Closed&quot;),ISCHANGED(ACG_Status__c)),
NOT(ISBLANK( ACG_End_Date__c )),
ISPICKVAL(PRIORVALUE(ACG_Status__c), &quot;Closed&quot;),
NOT(ISBLANK(PRIORVALUE(ACG_End_Date__c))),
$Profile.Name &lt;&gt; &#39;System Administrator&#39;
)</errorConditionFormula>
    <errorMessage>Cannot change a Facility Adjustment if it has been closed with an end date</errorMessage>
</ValidationRule>