unpackaged/main/default/objects/ACG_Facility_Adjustment__c/validationRules/Cannot_Change_Facility.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Facility</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() )
&amp;&amp;
ISCHANGED( Service_Territory__c )
&amp;&amp;
$Profile.Name  &lt;&gt; &#39;System Administrator&#39;</errorConditionFormula>
    <errorMessage>Cannot change Facility / Service Territory. Please create a new Facility Adjustment instead.</errorMessage>
</ValidationRule>