unpackaged/main/default/objects/ACG_Facility_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ACG_Adjustment_Category__c</columns>
    <columns>ACG_Adjustment_Type__c</columns>
    <columns>ACG_Payment_Amount__c</columns>
    <columns>ACG_Status__c</columns>
    <columns>ACG_Start_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>ACG_Charge_1099__c</columns>
    <columns>ACG_Total_Adjustment_Amount__c</columns>
    <columns>ACG_Nature_of_Payments__c</columns>
    <columns>ACG_Amount_Paid__c</columns>
    <columns>ACG_Amount_Remaining__c</columns>
    <columns>ACG_Adjustments_Made__c</columns>
    <columns>ACG_Adjustments_Remaining__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACG_Start_Date__c</field>
        <operation>equals</operation>
        <value>8/16/2025</value>
    </filters>
    <filters>
        <field>ACG_Adjustment_Category__c</field>
        <operation>equals</operation>
        <value>Battery Warranty Reserve-Club Assist,Battery Warranty Reserve-Interstate</value>
    </filters>
    <filters>
        <field>ACG_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All</label>
</ListView>